first branch commit

--- a/layout.html
+++ b/layout.html
@@ -1,60 +1,124 @@
-<!DOCTYPE html>
-<html>
-	<head>
-		<title>
-		
-		</title>
-	</head>
-	<body>
-		<table>
-			<tr>
-				<th> </th>
-				<th>1</th>
-				<th>2</th>
-				<th>3</th>
-				<th>4</th>
-				<th>5</th>
-			</tr>
-			<tr>
-				<th>1</th>
-				<td>2</td>
-				<td>3</td>
-				<td>4</td>
-				<td>5</td>
-				<td>6</td>
-			</tr>
-			<tr>
-				<th>2</th>
-				<td>3</td>
-				<td>4</td>
-				<td>5</td>
-				<td>6</td>
-				<td>7</td>
-			</tr>
-			<tr>
-				<th>3</th>
-				<td>4</td>
-				<td>5</td>
-				<td>6</td>
-				<td>7</td>
-				<td>8</td>
-			</tr>
-			<tr>
-				<th>4</th>
-				<td>5</td>
-				<td>6</td>
-				<td>7</td>
-				<td>8</td>
-				<td>9</td>
-			</tr>
-			<tr>
-				<th>5</th>
-				<td>6</td>
-				<td>7</td>
-				<td>8</td>
-				<td>9</td>
-				<td>10</td>
-			</tr>
-		</table>
-	</body>
-</html>
+<head>
+	<link rel="stylesheet" type="text/css" href="john-style.css">
+</head>
+
+<form action="http://web.engr.oregonstate.edu/~osterbit/2/repo/class-content/form_tests/Formtest.php" method="get">
+
+	<h4> Some GET Data
+
+	<p> Text here:
+		<input type="text" name="text_input" size="15" maxlength="30">
+	</p>
+	
+	<p> Number here:
+		<input type="number" name="number_input" min="1">
+	</p>
+
+	<p> Password here:
+		<input type="password" name="password_input" size= "15" maxlength="30">
+	</p>
+
+	<p> Select between: <br> <br>
+		<input type="radio" name="candy" value="Snickers"> Snickers <br><br>
+		<input type="radio" name="candy" value="Skittles"> Skittles <br><br>
+		<input type="radio" name="candy" value="Mentos"> Mentos <br><br>
+		<input type="submit" value="submit">
+	</p>
+	
+	</h4>
+
+</form>
+
+<form action="http://web.engr.oregonstate.edu/~osterbit/2/repo/class-content/form_tests/Formtest.php" method="post">
+
+	<h4> Some POST Data 
+
+	<p> Text here:
+		<input type="text" name="text_input" size="15" maxlength="30">
+	</p>
+
+	<p> Number here:
+		<input type="number" name="number_input" min="1">
+	</p>
+
+	<p> Password here:
+		<input type="password" name="password_input" size= "15" maxlength="30">
+	</p>
+
+	<p> Select between: <br> <br>
+		<input type="radio" name="candy" value="Snickers"> Snickers <br><br>
+		<input type="radio" name="candy" value="Skittles"> Skittles <br><br>
+		<input type="radio" name="candy" value="Mentos"> Mentos <br><br>
+		<input type="submit" value="submit">
+	</p> 
+	
+	</h4>
+
+</form>
+
+<br>
+
+<p1> <img src="" alt="100 x 125 px" width="100 px" height="125 px">
+
+Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+Phasellus imperdiet, nulla et dictum interdum, nisi lorem egestas odio, vitae scelerisque enim ligula venenatis dolor. 
+Maecenas nisl est, ultrices nec congue eget, auctor vitae massa. Fusce luctus vestibulum augue ut aliquet. 
+Mauris ante ligula, facilisis sed ornare eu, lobortis in odio. 
+Praesent convallis urna a lacus interdum ut hendrerit risus congue. 
+Nunc sagittis dictum nisi, sed ullamcorper ipsum dignissim ac. 
+In at libero sed nunc venenatis imperdiet sed ornare turpis. Donec vitae dui eget tellus gravida venenatis. 
+Integer fringilla congue eros non fermentum. Sed dapibus pulvinar nibh tempor porta. Cras ac leo purus. 
+Mauris quis diam velit. 
+Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+Phasellus imperdiet, nulla et dictum interdum, nisi lorem egestas odio, vitae scelerisque enim ligula venenatis dolor. 
+Maecenas nisl est, ultrices nec congue eget, auctor vitae massa. Fusce luctus vestibulum augue ut aliquet. 
+Mauris ante ligula, facilisis sed ornare eu, lobortis in odio. 
+Praesent convallis urna a lacus interdum ut hendrerit risus congue. 
+Nunc sagittis dictum nisi, sed ullamcorper ipsum dignissim ac. 
+In at libero sed nunc venenatis imperdiet sed ornare turpis. Donec vitae dui eget tellus gravida venenatis. 
+Integer fringilla congue eros non fermentum. Sed dapibus pulvinar nibh tempor porta. Cras ac leo purus. 
+Mauris quis diam velit.
+Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+Phasellus imperdiet, nulla et dictum interdum, nisi lorem egestas odio, vitae scelerisque enim ligula venenatis dolor. 
+Maecenas nisl est, ultrices nec congue eget, auctor vitae massa. Fusce luctus vestibulum augue ut aliquet. 
+Mauris ante ligula, facilisis sed ornare eu, lobortis in odio. 
+Praesent convallis urna a lacus interdum ut hendrerit risus congue. 
+Nunc sagittis dictum nisi, sed ullamcorper ipsum dignissim ac. 
+In at libero sed nunc venenatis imperdiet sed ornare turpis. Donec vitae dui eget tellus gravida venenatis. 
+Integer fringilla congue eros non fermentum. Sed dapibus pulvinar nibh tempor porta. Cras ac leo purus. 
+Mauris quis diam velit.
+
+<br><br>
+
+Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+Phasellus imperdiet, nulla et dictum interdum, nisi lorem egestas odio, vitae scelerisque enim ligula venenatis dolor. 
+Maecenas nisl est, ultrices nec congue eget, auctor vitae massa. Fusce luctus vestibulum augue ut aliquet. 
+Mauris ante ligula, facilisis sed ornare eu, lobortis in odio. 
+Praesent convallis urna a lacus interdum ut hendrerit risus congue. 
+Nunc sagittis dictum nisi, sed ullamcorper ipsum dignissim ac. 
+In at libero sed nunc venenatis imperdiet sed ornare turpis. Donec vitae dui eget tellus gravida venenatis. 
+Integer fringilla congue eros non fermentum. Sed dapibus pulvinar nibh tempor porta. Cras ac leo purus. 
+Mauris quis diam velit. 
+Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+Phasellus imperdiet, nulla et dictum interdum, nisi lorem egestas odio, vitae scelerisque enim ligula venenatis dolor. 
+Maecenas nisl est, ultrices nec congue eget, auctor vitae massa. Fusce luctus vestibulum augue ut aliquet. 
+Mauris ante ligula, facilisis sed ornare eu, lobortis in odio. 
+Praesent convallis urna a lacus interdum ut hendrerit risus congue. 
+Nunc sagittis dictum nisi, sed ullamcorper ipsum dignissim ac. 
+In at libero sed nunc venenatis imperdiet sed ornare turpis. Donec vitae dui eget tellus gravida venenatis. 
+Integer fringilla congue eros non fermentum. Sed dapibus pulvinar nibh tempor porta. Cras ac leo purus. 
+Mauris quis diam velit.
+Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+Phasellus imperdiet, nulla et dictum interdum, nisi lorem egestas odio, vitae scelerisque enim ligula venenatis dolor. 
+Maecenas nisl est, ultrices nec congue eget, auctor vitae massa. Fusce luctus vestibulum augue ut aliquet. 
+Mauris ante ligula, facilisis sed ornare eu, lobortis in odio. 
+Praesent convallis urna a lacus interdum ut hendrerit risus congue. 
+Nunc sagittis dictum nisi, sed ullamcorper ipsum dignissim ac. 
+In at libero sed nunc venenatis imperdiet sed ornare turpis. Donec vitae dui eget tellus gravida venenatis. 
+Integer fringilla congue eros non fermentum. Sed dapibus pulvinar nibh tempor porta. Cras ac leo purus. 
+Mauris quis diam velit.
+
+<br><br>
+
+</p1>
+
