second commit for Jonathan

--- a/layout.html
+++ b/layout.html
@@ -1,5 +1,5 @@
 <head>
-	<link rel="stylesheet" type="text/css" href="john-style.css">
+	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 
 <form action="http://web.engr.oregonstate.edu/~osterbit/2/repo/class-content/form_tests/Formtest.php" method="get">
