--- a/layout.html
+++ b/layout.html
@@ -58,7 +58,7 @@
 
 <br>
 
-<p1> <img src="" alt="100 x 125 px" width="100 px" height="125 px">
+<p1> <img src="http://www.w3.org/html/logo/downloads/HTML5_Logo_256.png" alt="100 x 125 px" width="100 px" height="125 px">
 
 Lorem ipsum dolor sit amet, consectetur adipiscing elit.
 Phasellus imperdiet, nulla et dictum interdum, nisi lorem egestas odio, vitae scelerisque enim ligula venenatis dolor. 
