Should be everything

--- a/layout.html
+++ b/layout.html
@@ -1,60 +1,75 @@
 <!DOCTYPE html>
 <html>
 	<head>
+	<link rel="stylesheet" type="text/css" href="style.css"/>
 		<title>
-		
+		Assignment 2
 		</title>
 	</head>
+	
 	<body>
+		
 		<table>
-			<tr>
+			<caption>
+				This is a simple addition table!
+			</caption>
+			<thead>
 				<th> </th>
 				<th>1</th>
 				<th>2</th>
 				<th>3</th>
 				<th>4</th>
 				<th>5</th>
-			</tr>
-			<tr>
-				<th>1</th>
-				<td>2</td>
-				<td>3</td>
-				<td>4</td>
-				<td>5</td>
-				<td>6</td>
-			</tr>
-			<tr>
-				<th>2</th>
-				<td>3</td>
-				<td>4</td>
-				<td>5</td>
-				<td>6</td>
-				<td>7</td>
-			</tr>
-			<tr>
-				<th>3</th>
-				<td>4</td>
-				<td>5</td>
-				<td>6</td>
-				<td>7</td>
-				<td>8</td>
-			</tr>
-			<tr>
-				<th>4</th>
-				<td>5</td>
-				<td>6</td>
-				<td>7</td>
-				<td>8</td>
-				<td>9</td>
-			</tr>
-			<tr>
-				<th>5</th>
-				<td>6</td>
-				<td>7</td>
-				<td>8</td>
-				<td>9</td>
-				<td>10</td>
-			</tr>
+			</thead>
+			<tbody>
+				<tr>
+					<td>1</td>
+					<td>2</td>
+					<td>3</td>
+					<td>4</td>
+					<td>5</td>
+					<td>6</td>
+				</tr>
+				<tr>
+					<td>2</td>
+					<td>3</td>
+					<td>4</td>
+					<td>5</td>
+					<td>6</td>
+					<td>7</td>
+				</tr>
+				<tr>
+					<td>3</td>
+					<td>4</td>
+					<td>5</td>
+					<td>6</td>
+					<td>7</td>
+					<td>8</td>
+				</tr>
+				<tr>
+					<td>4</td>
+					<td>5</td>
+					<td>6</td>
+					<td>7</td>
+					<td>8</td>
+					<td>9</td>
+				</tr>
+				<tr>
+					<td>5</td>
+					<td>6</td>
+					<td>7</td>
+					<td>8</td>
+					<td>9</td>
+					<td>10</td>
+				</tr>
+			</tbody>
+				<tfoot>
+					<tr>
+						<td colspan="2">Footer 1</td>
+						<td colspan="4">Footer 2</td>
+					</tr>
+				</tfoot>
+			
 		</table>
 	</body>
 </html>
